fix overflow

--- a/src/css/packages.css
+++ b/src/css/packages.css
@@ -101,7 +101,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        min-height: 550px;
+        min-height: 750px;
         margin-right: 0;
     }
 }
